--- a/Projekat1/Projekat1.vcxproj
+++ b/Projekat1/Projekat1.vcxproj
@@ -128,11 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.c" />
+    <ClCompile Include="Map.c" />
     <ClCompile Include="Player.c" />
     <ClCompile Include="Render.c" />
     <ClCompile Include="Vectors.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="Vectors.h" />
