--- a/Projekat1/Projekat1.vcxproj.filters
+++ b/Projekat1/Projekat1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Map.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Ghosts.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Map.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Ghosts.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
