--- a/Projekat1/Projekat1.vcxproj
+++ b/Projekat1/Projekat1.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Main.c" />
     <ClCompile Include="Map.c" />
     <ClCompile Include="Player.c" />
+    <ClCompile Include="Queue.c" />
     <ClCompile Include="Render.c" />
     <ClCompile Include="Vectors.c" />
   </ItemGroup>
@@ -138,6 +139,7 @@
     <ClInclude Include="Ghosts.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Queue.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="Vectors.h" />
   </ItemGroup>
