--- a/Projekat1/Projekat1.vcxproj.filters
+++ b/Projekat1/Projekat1.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Ghosts.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Queue.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Ghosts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
